--- a/srcs/frontend/index.html
+++ b/srcs/frontend/index.html
@@ -5,56 +5,99 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dummy BeePong</title>
     <script>
-        function getCookie(name) {
-            let cookieValue = null;
-            if (document.cookie && document.cookie !== '') {
-                const cookies = document.cookie.split(';');
-                for (let i = 0; i < cookies.length; i++) {
-                    const cookie = cookies[i].trim();
-                    // Does this cookie string begin with the name we want?
-                    if (cookie.substring(0, name.length + 1) === (name + '=')) {
-                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                        break;
-                    }
+        // Define routes
+        const routes = {
+            '/': 'home',
+            '/home': 'home',
+            '/about': 'about',
+        };
+
+        // Load content based on the route
+        async function loadPage(route) {
+            let path = route.endsWith('/') && route !== '/' ? route.slice(0, -1) : route;
+            const page = routes[path] || window.location.pathname;
+            try {
+                const response = await fetch(`/page/${page}/`);
+                if (!response.ok) {
+                    if (response.status !== 404)
+                        throw new Error('Network response was not ok');
                 }
+                const data = await response.text();
+                document.getElementById('content').innerHTML = data;
+            } catch (error) {
+                console.error('There was a problem with the fetch operation:', error);
             }
-            return cookieValue;
+        }
+
+        // Handle navigation
+        function navigate(event) {
+            event.preventDefault();
+            const path = event.target.getAttribute('href');
+            history.pushState(null, null, path);
+            loadPage(path);
+        }
+
+        // Listen to popstate events for back/forward navigation
+        window.addEventListener('popstate', () => {
+            loadPage(window.location.pathname);
+        });
+
+        // Initial page load
+        document.addEventListener('DOMContentLoaded', () => {
+            loadPage(window.location.pathname);
+        });
+
+        function getCookie(name) {
+			let cookieValue = null;
+			if (document.cookie && document.cookie !== '') {
+					const cookies = document.cookie.split(';');
+					for (let i = 0; i < cookies.length; i++) {
+							const cookie = cookies[i].trim();
+							// Does this cookie string begin with the name we want?
+							if (cookie.substring(0, name.length + 1) === (name + '=')) {
+									cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+									break;
+							}
+					}
+			}
+			return cookieValue;
         }
 
         async function fetchRegisterPage() {
-            const csrftoken = getCookie('csrftoken');
-            try {
-                const response = await fetch('/accounts/register/', {
-                    method: 'GET',
-                    headers: {
-                        'X-CSRFToken': csrftoken
-                    }
-                });
-                if (!response.ok) {
-                    throw new Error('Network response was not ok ' + response.statusText);
+                const csrftoken = getCookie('csrftoken');
+                try {
+                        const response = await fetch('/accounts/register/', {
+                                method: 'GET',
+                                headers: {
+                                        'X-CSRFToken': csrftoken
+                                }
+                        });
+                        if (!response.ok) {
+                                throw new Error('Network response was not ok ' + response.statusText);
+                        }
+                        const data = await response.text(); // or response.json() if the API returns JSON
+                        document.getElementById('register').innerHTML = data;
+                } catch (error) {
+                        console.error('There was a problem with the fetch operation:', error);
+                        document.getElementById('register').innerHTML = '<p>Failed to load the registration page. Please try again later.</p>';
                 }
-                const data = await response.text(); // or response.json() if the API returns JSON
-                document.getElementById('register').innerHTML = data;
-            } catch (error) {
-                console.error('There was a problem with the fetch operation:', error);
-                document.getElementById('register').innerHTML = '<p>Failed to load the registration page. Please try again later.</p>';
-            }
         }
         async function fetchTestData() {
-            const response = await fetch('/api/');
-            const data = await response.text(); // or response.json() if the API returns JSON
-            document.getElementById('test').innerHTML = data;
+                const response = await fetch('/api/');
+                const data = await response.text(); // or response.json() if the API returns JSON
+                document.getElementById('test').innerHTML = data;
         }
     </script>
 </head>
 
 <body>
-    <div>
-        <button onclick="fetchRegisterPage()">Register</button>
-        <div id="register"></div>
-        <button onclick="fetchTestData()">test</button>
-        <div id="test"></div>
-    </div>
+    <nav>
+        <ul>
+            <li><a href="/home" onclick="navigate(event)">Home</a></li>
+            <li><a href="/about" onclick="navigate(event)">About</a></li>
+        </ul>
+    </nav>
+    <div id="content"></div>
 </body>
-
 </html>
+
