add logout, refactor html and js

--- a/srcs/frontend/index.html
+++ b/srcs/frontend/index.html
@@ -4,154 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dummy BeePong</title>
-    <script>
-        // Define routes
-        const routes = {
-            '/': 'home',
-            '/home': 'home',
-            '/about': 'about',
-            '/accounts/register': 'accounts/register',
-            '/accounts/login' : 'accounts/login'
-        };
-
-        // Load content based on the route
-        async function loadPage(route) {
-            let path = route.endsWith('/') && route !== '/' ? route.slice(0, -1) : route;
-            const page = routes[path] || window.location.pathname.slice(1);
-            try {
-                const response = await fetch(`/page/${page}/`);
-                if (!response.ok) {
-                    if (response.status !== 404)
-                        throw new Error('Network response was not ok');
-                }
-                const data = await response.text();
-                document.getElementById('content').innerHTML = data;
-            } catch (error) {
-                console.error('There was a problem with the fetch operation:', error);
-            }
-        }
-
-        // Handle navigation
-        function navigate(eventOrPath) {
-            let path;
-            if (typeof eventOrPath === 'string') {
-                path = eventOrPath;
-            } else {
-                eventOrPath.preventDefault();
-                path = eventOrPath.target.getAttribute('href');
-            }
-
-            if (window.location.pathname === path)
-                return;
-
-            history.pushState(null, null, path);
-            loadPage(path);
-        }
-
-        // Listen to popstate events for back/forward navigation
-        window.addEventListener('popstate', () => {
-            loadPage(window.location.pathname);
-        });
-
-        // Initial page load
-        document.addEventListener('DOMContentLoaded', () => {
-            loadPage(window.location.pathname);
-        });
-
-        function getCookie(name) {
-			let cookieValue = null;
-			if (document.cookie && document.cookie !== '') {
-					const cookies = document.cookie.split(';');
-					for (let i = 0; i < cookies.length; i++) {
-							const cookie = cookies[i].trim();
-							// Does this cookie string begin with the name we want?
-							if (cookie.substring(0, name.length + 1) === (name + '=')) {
-									cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-									break;
-							}
-					}
-			}
-			return cookieValue;
-        }
-
-        async function fetchRegisterPage() {
-                const csrftoken = getCookie('csrftoken');
-                try {
-                        const response = await fetch('/accounts/register/', {
-                                method: 'GET',
-                                headers: {
-                                        'X-CSRFToken': csrftoken
-                                }
-                        });
-                        if (!response.ok) {
-                                throw new Error('Network response was not ok ' + response.statusText);
-                        }
-                        const data = await response.text(); // or response.json() if the API returns JSON
-                        document.getElementById('register').innerHTML = data;
-                } catch (error) {
-                        console.error('There was a problem with the fetch operation:', error);
-                        document.getElementById('register').innerHTML = '<p>Failed to load the registration page. Please try again later.</p>';
-                }
-        }
-        async function fetchTestData() {
-                const response = await fetch('/api/');
-                const data = await response.text(); // or response.json() if the API returns JSON
-                document.getElementById('test').innerHTML = data;
-        }
-
-        async function handleFormSubmit(event) {
-    event.preventDefault();
-    const form = event.target;
-    const formData = new FormData(form);
-    const csrftoken = getCookie('csrftoken');
-
-    // Creating a URLSearchParams object to properly format the data
-    const data = new URLSearchParams();
-    formData.forEach((value, key) => {
-        data.append(key, value);
-    });
-
-    const actionUrl = form.action;
-
-    try {
-        const response = await fetch(actionUrl, {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/x-www-form-urlencoded',
-                'X-CSRFToken': csrftoken
-            },
-            body: data.toString() // Converting URLSearchParams object to string
-        });
-
-        if (!response.ok) {
-            throw new Error('Network response was not ok');
-        }
-
-        const result = await response.json();
-
-        // Handle the JSON response
-        if (result.success) {
-            // Reload the home page content after successful registration
-            navigate('/home');
-        } else {
-            // Handle errors, possibly display them on the form
-            console.error('Form submission error:', result.errors);
-        }
-    } catch (error) {
-        console.error('There was a problem with the fetch operation:', error);
-    }
-}
-    </script>
+    <script src="/js/form.js"></script>
+    <script src="/js/route.js"></script>
+    <script src="/js/test.js"></script>
 </head>
 
 <body>
-    <nav>
-        <ul>
-            <li><a href="/home" onclick="navigate(event)">Home</a></li>
-            <li><a href="/about" onclick="navigate(event)">About</a></li>
-        </ul>
-    </nav>
-    <div id="content"></div>
+    <nav id="navbar"></nav>
+    <main id="content"></main>
 </body>
 </html>
 
