--- a/srcs/frontend/index.html
+++ b/srcs/frontend/index.html
@@ -3,15 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dummy BeePong</title>
+    <title>BeePong</title>
     <script src="/js/form.js"></script>
     <script src="/js/route.js"></script>
-    <script src="/js/test.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/global.css">
+    <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="/css/button.css">
+    <link rel="stylesheet" href="/css/card.css">
+    <link rel="stylesheet" href="/css/form.css">
 </head>
 
 <body>
-    <nav id="navbar"></nav>
+    <nav>
+        <div>
+            <a href="/" onclick="navigate(event)">
+                <img src="/img/beePong.svg" alt="beePong logo"/>
+            </a>
+        </div>
+        <ul id="navbar-content">
+        <ul>
+    </nav>
     <main id="content"></main>
+    <footer>2024 Hive Helsinki X BeePong GANG</footer>
 </body>
 </html>
 
