add css for tournament page

--- a/srcs/frontend/index.html
+++ b/srcs/frontend/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="/css/button.css">
     <link rel="stylesheet" href="/css/card.css">
     <link rel="stylesheet" href="/css/form.css">
+    <link rel="stylesheet" href="/css/tournament.css">
 </head>
 
 <body>
