add lobby page and navigate to the game

--- a/srcs/frontend/index.html
+++ b/srcs/frontend/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="/css/card.css">
     <link rel="stylesheet" href="/css/form.css">
     <link rel="stylesheet" href="/css/tournament.css">
+    <link rel="stylesheet" href="/css/tournament_lobby.css">
 </head>
 
 <body>
