--- a/srcs/frontend/index.html
+++ b/srcs/frontend/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BeePong</title>
     <script src="/js/form.js"></script>
-    <script src="/js/route.js"></script>
+    <script type="module" src="/js/route.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
