--- a/srcs/frontend/index.html
+++ b/srcs/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BeePong</title>
-    <script src="/js/form.js"></script>
+    <script type="module" src="/js/form.js"></script>
     <script type="module" src="/js/route.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
