--- a/srcs/frontend/index.html
+++ b/srcs/frontend/index.html
@@ -25,7 +25,7 @@
 <body>
     <nav>
         <div>
-            <a href="/" >
+            <a href="/" onclick="navigate(event)">
                 <img src="/img/beePong.svg" alt="beePong logo"/>
             </a>
         </div>
