--- a/srcs/frontend/index.html
+++ b/srcs/frontend/index.html
@@ -24,7 +24,12 @@
       <a href="/" onclick="navigate(event)">
         <img src="/img/beePong.svg" alt="beePong logo"/>
       </a>
-      <ul id="navbar-content"></ul>
+      <ul>
+        <li>
+          <a href="/about" onclick="navigate(event)">ABOUT</a>
+        </li>
+        <li id="navbar-user-actions"></li>
+      </ul>
     </nav>
     <main id="content"></main>
     <footer>2024 Hive Helsinki X BeePong GANG</footer>
