refactor card and button css, refactor home.html

--- a/srcs/frontend/index.html
+++ b/srcs/frontend/index.html
@@ -22,7 +22,7 @@
   <body>
     <nav>
       <a href="/" onclick="navigate(event)">
-        <img src="/img/beePong.svg" alt="beePong logo"/>
+        <img src="/img/beePong.svg" alt="beePong logo" width="182" height="61"/>
       </a>
       <ul>
         <li>
@@ -32,7 +32,7 @@
       </ul>
     </nav>
     <main id="content"></main>
-    <footer>2024 Hive Helsinki X BeePong GANG</footer>
+    <footer>2024 HIVE HELSINKI X BEEPONG GANG</footer>
   </body>
 </html>
 
