--- a/srcs/frontend/index.html
+++ b/srcs/frontend/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BeePong</title>
-    <script src="/js/form.js"></script>
-    <script src="/js/route.js"></script>
+    <script type="module" src="/js/main.js"></script>
+    <script type="module" src="/js/form.js"></script>
+    <script type="module" src="/js/route.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Kumbh+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/global.css">
     <link rel="stylesheet" href="/css/navbar.css">
     <link rel="stylesheet" href="/css/button.css">
@@ -19,20 +17,22 @@
     <link rel="stylesheet" href="/css/form.css">
     <link rel="stylesheet" href="/css/tournament.css">
     <link rel="stylesheet" href="/css/tournament_lobby.css">
-</head>
+  </head>
 
-<body>
+  <body>
     <nav>
-        <div>
-            <a href="/" onclick="navigate(event)">
-                <img src="/img/beePong.svg" alt="beePong logo"/>
-            </a>
-        </div>
-        <ul id="navbar-content">
-        <ul>
+      <a href="/" onclick="navigate(event)">
+        <img src="/img/beePong.svg" alt="beePong logo" width="182" height="61"/>
+      </a>
+      <ul>
+        <li>
+          <a href="/about" onclick="navigate(event)">ABOUT</a>
+        </li>
+        <li id="navbar-user-actions"></li>
+      </ul>
     </nav>
     <main id="content"></main>
-    <footer>2024 Hive Helsinki X BeePong GANG</footer>
-</body>
+    <footer>2024 HIVE HELSINKI X BEEPONG GANG</footer>
+  </body>
 </html>
 
