ensure all path has trailing slash

--- a/srcs/frontend/index.html
+++ b/srcs/frontend/index.html
@@ -26,7 +26,7 @@
       </a>
       <ul>
         <li>
-          <a href="/about" onclick="navigate(event)">ABOUT</a>
+          <a href="/about/" onclick="navigate(event)">ABOUT</a>
         </li>
         <li id="navbar-user-actions"></li>
       </ul>
